Tested and made changes to bot

--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     "Okpopo Trust"
   ],
   "scripts": {
-    "start": "python ./server/index.py"
+    "start": "python ./server/bankbot.py"
   }
 }
