--- a/package.json
+++ b/package.json
@@ -1,21 +1,40 @@
 {
-  "name": "Talk2Bank",
-  "version": "1.0.0",
-  "description": "A simple chat bot that's able to communicate in Yoruba, Igbo, Hausa and of course English",
-  "main": "./server/index",
-  "repository": "https://github.com/MAdebawojo/Talk2Bank.git",
-  "author": "Mosope Adebawojo",
-  "license": "MIT",
-  "contributors": [
-    "Gabriel Benedict",
-    "Ayomide",
-    "Korede",
-    "Okpopo Trust"
-  ],
-  "scripts": {
-    "start": "python ./server/bankbot.py"
-  },
+  "name": "client",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "yarn": "^1.22.19"
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^13.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-scripts": "5.0.1",
+    "reactjs-stylesheet": "^1.0.9",
+    "web-vitals": "^2.1.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
